--- a/docs/locale/es/LC_MESSAGES/schema/concepts.po
+++ b/docs/locale/es/LC_MESSAGES/schema/concepts.po
@@ -6,17 +6,17 @@
 # Translators:
 # Javier Sarquis <sarquis.translations@gmail.com>, 2020
 # Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
-# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
 # Peter Low <peter@openownership.org>, 2020
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-06 12:18+0000\n"
+"POT-Creation-Date: 2022-04-06 11:47+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,12 +24,12 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 87b8cb58b7494c79817d9e81096027d0
+# 01192a3441ff47b1b1761e8566f87f3f
 #: ../../schema/concepts.rst:4
 msgid "Key concepts"
 msgstr "Conceptos clave"
 
-# e71ad0e1f3b64333838858ed48986bbe
+# 7fd4e5783733499695258e700af5c623
 #: ../../schema/concepts.rst:8
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
@@ -45,7 +45,7 @@ msgstr ""
 ":doc:`Registro de modificaciones <changelog>` y `De qué se trata "
 "<../about>`_ para obtener más información."
 
-# e339e97308c34e84be25ac7a5201bb1c
+# d12efb966b38409b931fe13b8cc8bc0d
 #: ../../schema/concepts.rst:10
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
@@ -56,7 +56,7 @@ msgstr ""
 "requeridos y recomendados del Estándar, conforme a lo definido en `RFC2119 "
 "<https://tools.ietf.org/html/rfc2119>`_."
 
-# 39aefe6717ae4d3a83fa4023c1653a76
+# 2bfd6a5c1ed74b5c92c1df12abbb0caa
 #: ../../schema/concepts.rst:13
 msgid ""
 "The concept of a 'statement' is at the heart of the Beneficial Ownership "
@@ -68,28 +68,28 @@ msgstr ""
 "basados en BODS consisten en un conjunto de declaraciones ordenadas que "
 "describen lo siguiente:"
 
-# 6af55ab0c5fa4ba8aed4761f2d3778d8
+# 8fdc203936064f5db6ce18ea61afdf58
 #: ../../schema/concepts.rst:15
 msgid "Ownership or control"
 msgstr "Titularidad o control"
 
-# 555106a99a0e42b8857e2520cf30beeb
+# b97e380a5e264170bee28085c65f7a05
 #: ../../schema/concepts.rst:16
 msgid "Entities (including companies, trusts and arrangements)"
 msgstr ""
 "Entidades (incluidas las empresas, fideicomisos y estructuras jurídicas)"
 
-# 4cca36b1ab3849eaae196a927aceab20
+# fe0b6ea294b549a0be2e09d2637cc43f
 #: ../../schema/concepts.rst:17
 msgid "Natural persons (who own or control entities)"
 msgstr "Personas físicas (que poseen o controlan entidades)"
 
-# 866aebe4bc5b47dd88caaa7c19e4ae82
+# a4426410fcf5417f9b5f8097eb9ac10d
 #: ../../schema/concepts.rst:20
 msgid "Statements"
 msgstr "Declaraciones"
 
-# ce3547102ea44291875798ac5738549a
+# 5831d3e0e9be412d9f8a6d2ac1a0f6f3
 #: ../../schema/concepts.rst:22
 msgid ""
 "Details of how an interested party controls or owns a company or other legal"
@@ -99,7 +99,7 @@ msgstr ""
 "empresa u otra entidad jurídica se encuentran en una declaración sobre "
 "titularidad o control."
 
-# 7594ef8e4adc4662b8fb7606b3bceebe
+# 56db9f52aa39487dbcdf2dc829e14051
 #: ../../schema/concepts.rst:27
 msgid ""
 "Details of the subject of an ownership-or-control statement and its "
@@ -111,7 +111,7 @@ msgstr ""
 " declaración sobre titularidad o control hace referencia a estas "
 "declaraciones, actuando como enlace."
 
-# 0f53d31feb384ac094fad46bfb74559f
+# d88fc14f24384a769d004bd490fdbafa
 #: ../../schema/concepts.rst:32
 msgid ""
 "Together, the statements above tell us that Roberto Lopez has some kind of "
@@ -120,7 +120,7 @@ msgstr ""
 "Conjuntamente, las declaraciones anteriores nos indican que Roberto López "
 "goza de algún tipo de control o titularidad en RENCO Energy Ltd."
 
-# 2b8a77fee32e429eab17c7fb3c73e6d8
+# 11912b2985f947f0a62274a736a3de6e
 #: ../../schema/concepts.rst:34
 msgid ""
 "The :any:`schema reference <schema-reference>` defines in detail the fields "
@@ -130,12 +130,12 @@ msgstr ""
 " campos que debería contener cada declaración, y cómo deberían "
 "estructurarse."
 
-# 0b5d101fc4054baaa9a36cd90444b939
+# 1d15389a7c874cf4ab5390bea5fbc320
 #: ../../schema/concepts.rst:37
 msgid "Statements as claims"
 msgstr "Las declaraciones como afirmaciones"
 
-# f5039a2151fc44fe9391e9e7137399c6
+# a9592c97771c4ebca1aadaa9681bd0b3
 #: ../../schema/concepts.rst:39
 msgid ""
 "Each statement represents a claim about beneficial ownership made by a "
@@ -144,7 +144,7 @@ msgstr ""
 "Cada declaración representa una afirmación sobre el carácter de beneficiario"
 " final realizada por una determinada fuente en un momento en particular."
 
-# acd6949c522044cbbd8b68ddaafe6d2b
+# bfc9c209e7014a7eae075b9cbcc98c23
 #: ../../schema/concepts.rst:44
 msgid ""
 "Modelling beneficial ownership information in this way allows us to make "
@@ -155,17 +155,17 @@ msgstr ""
 "manera nos permite darle sentido los datos recibidos de múltiples fuentes a "
 "lo largo de períodos de tiempo prolongados. En particular, permite:"
 
-# c7fdc3d590c84434b8c223e580c7d521
+# d36bea5b85d5443fa0fe30566b2016e6
 #: ../../schema/concepts.rst:46
 msgid "Statements about beneficial ownership to conflict"
 msgstr "Que las declaraciones sobre beneficiarios finales se contradigan"
 
-# b9d2bdd71c1b41d5b07d738f0a1abe30
+# cfabdefba30e4f319b2cce672914eb2b
 #: ../../schema/concepts.rst:47
 msgid "Statements about beneficial ownership to overlap"
 msgstr "Que las declaraciones sobre beneficiarios finales se superpongan"
 
-# 8623f648b1704cc1b7e0051b40ed323d
+# 6bdca28103b24adcb3750edb9707dc0e
 #: ../../schema/concepts.rst:48
 msgid ""
 "Production of historical beneficial ownership snapshots (to answer questions"
@@ -177,7 +177,7 @@ msgstr ""
 "momento?\"). Es lo que se conoce como `modelación bitemporal "
 "<https://en.wikipedia.org/wiki/Bitemporal_Modeling>`_. "
 
-# 6cd9a4be24d9497da339d105541e7d5c
+# c61ef86d2ecc4d21901aab4458dc5036
 #: ../../schema/concepts.rst:50
 msgid ""
 "When representing data conforming to BODS, users therefore need to handle "
@@ -193,18 +193,18 @@ msgstr ""
 "<guidance-identifiers>` contenida en las ``personStatements`` y "
 "``entityStatements``."
 
-# eec0d31cca1e4c37bd715db0314feb91
+# 964e7773b093499db355712be06554c9
 #: ../../schema/concepts.rst:54
 msgid "Data model overview"
 msgstr "Reseña general del modelo de datos"
 
-# 62f16f8475ed49c9af01ddad06f8bd41
+# 84af8707a78e49caab75834cbce029fb
 #: ../../schema/concepts.rst:56
 msgid "Statements are specified in the data schema as JSON objects:"
 msgstr ""
 "Las declaraciones se especifican en el esquema de datos como objetos JSON:"
 
-# ad5d25e584d041c8812c48b871607ac4
+# 46f9b146dfc7427ab21a8774de96f663
 #: ../../schema/concepts.rst:58
 msgid ""
 ":any:`Ownership-or-control statement <schema-ownership-or-control-"
@@ -213,17 +213,17 @@ msgstr ""
 ":any:`Declaración sobre titularidad o control <schema-ownership-or-control-"
 "statement>`"
 
-# 8440aa518ff44fc7b8f8de6262fd5aa0
+# 075ce6fb900945b1b5304688cd860af6
 #: ../../schema/concepts.rst:59
 msgid ":any:`Entity statement <schema-entity-statement>`"
 msgstr ":any:`Declaración sobre entidad <schema-entity-statement>`"
 
-# 27e723c0f3b7417abfa09d63084bb8c3
+# b239f65d73ac4618beee40ac5080493a
 #: ../../schema/concepts.rst:60
 msgid ":any:`Person statement <schema-person-statement>`"
 msgstr ":any:`Declaración sobre persona <schema-person-statement>`"
 
-# e6d44b8bb8fb4162babaa7b29881c8f2
+# cf1ce8d9d1264c4395a5350a4dca2a8e
 #: ../../schema/concepts.rst:62
 msgid ""
 "Each statement has a ``statementIdentifier`` and ``statementType`` field. "
@@ -234,7 +234,7 @@ msgstr ""
 "``statementType``. ``statementIdentifier`` existe solamente para conectar "
 "las declaraciones."
 
-# 005a4f7b937d440291c64954537af4e5
+# 6153c06493b44d70a09edc56adfbd8bd
 #: ../../schema/concepts.rst:64
 msgid ""
 "**Entity statements** are used to describe registered legal entities that "
@@ -248,7 +248,7 @@ msgstr ""
 "fideicomisos) y entidades artificiales (como las estructuras jurídicas de "
 "participación accionaria conjunta)."
 
-# a1430ace96834aa9b004eef898b282e6
+# d9952dc10ed947528d6fb761170aca13
 #: ../../schema/concepts.rst:65
 msgid ""
 "**Person statements** describe the natural persons who stand in "
@@ -258,7 +258,7 @@ msgstr ""
 "intervienen en relaciones que suponen el carácter de beneficiario final o "
 "controlante en última instancia."
 
-# 65581bb11e7449eca657d1cc11c7e518
+# 36bef13a61f849258870875cc152d382
 #: ../../schema/concepts.rst:66
 msgid ""
 "**Ownership-or-control statements** describe the interest(s) held by one "
@@ -270,7 +270,7 @@ msgstr ""
 "una entidad. Se vinculan a esas entidades y personas mediante referencias de"
 " ``statementIdentifier``."
 
-# 62f52a2c9c9e42cc941e5a4ecf883de6
+# 6fd687a6348e42de8c08735ea393ec83
 #: ../../schema/concepts.rst:68
 msgid ""
 "All statements have ``source`` and ``annotations`` properties which can "
@@ -284,7 +284,7 @@ msgstr ""
 "realizado. Consulte :ref:`Fuentes y notas<provenance>` para obtener "
 "orientación."
 
-# 9a9b061004d34d139236b799d358a2b5
+# e3f0bb1b9f41409e923f30c7f45c35dd
 #: ../../schema/concepts.rst:70
 msgid ""
 "``personStatements`` and ``entityStatements`` both contain a set of fields "
@@ -295,7 +295,7 @@ msgstr ""
 "conjunto de campos que pueden utilizarse para divulgar la identidad en el "
 "mundo real de la entidad o del individuo. Estos incluyen:"
 
-# 202a0a7708e64147b5fd21f0c0aa5a77
+# e009b0f339de492dba41d311671676ce
 #: ../../schema/concepts.rst:72
 msgid ""
 "An ``identifiers`` array that is used to provide known identifiers such as "
@@ -307,23 +307,23 @@ msgstr ""
 " compañías, o identificadores de contribuyentes compartibles públicamente en"
 " el caso de individuos."
 
-# 6157e9aa138a46fcbc3ae2d82a6b4614
+# 9489888187ab4e14ac0175d886b9efa2
 #: ../../schema/concepts.rst:73
 msgid "Jurisdiction or Nationality information"
 msgstr "Información sobre la jurisdicción o nacionalidad"
 
-# 5d40df2f20254d32b2403d4f0b08a60b
+# afad017dea674952a821fbe771e83a4c
 #: ../../schema/concepts.rst:74
 msgid ""
 "Important dates (birth date, death date, founding date, dissolution date)"
 msgstr "Fechas importantes (de nacimiento, defunción, fundación o disolución)"
 
-# 1cd51cf1db0548819ef8511a2cae9a44
+# 76a78f0d07454366ae1db7e72bedf810
 #: ../../schema/concepts.rst:75
 msgid "Addresses"
 msgstr "Domicilios"
 
-# 881fbbc4d9fc4c00a9e09278030c3619
+# 910d49af64c74efb9c69734505e8a103
 #: ../../schema/concepts.rst:77
 msgid ""
 "Including such identifiers allows intelligent integration of information "
@@ -333,7 +333,7 @@ msgstr ""
 "la información a través de las divulgaciones, los conjuntos de datos y el "
 "tiempo."
 
-# fc493b12c8a043c29b24cfdb530f6ab1
+# 468944fbea5b46e8ab3a09da09b220b1
 #: ../../schema/concepts.rst:79
 msgid ""
 "These fields are designed to support 'strict' and 'relaxed' validation, to "
@@ -349,7 +349,7 @@ msgstr ""
 "Otras fuentes deberían brindar la mayor cantidad de datos posible, con "
 "sujeción a las políticas vigentes y las limitaciones de privacidad."
 
-# 072454d59c7b4fc496595d4034947355
+# d24842178b6d49dba23ef22005264e10
 #: ../../schema/concepts.rst:81
 msgid ""
 "An ``ownershipOrControlStatement`` connects (via ``statementIdentifier`` "
@@ -362,17 +362,17 @@ msgstr ""
 "descripta en la ``entityStatement``) y a una ``interestedParty``. Esta parte"
 " interesada puede ser:"
 
-# a0287c9a8bbe49048741a4faba2bf5f1
+# 9f763dbc1f3e4758b9a6e336f9aaab67
 #: ../../schema/concepts.rst:83
 msgid "Another entity described by an ``entityStatement``;"
 msgstr "Otra entidad descripta en una ``entityStatement``;"
 
-# 6d488de17f68444db62c9efbe311d677
+# 0a6ebd99f9f5432f97a215815c726a18
 #: ../../schema/concepts.rst:84
 msgid "A person described by a ``personStatement``; or"
 msgstr "Una persona descripta en una ``personStatement``; o"
 
-# c6abac1d591f4527b44bc71b363cec73
+# 134f6136b11741eeb66f058f3b0326d0
 #: ../../schema/concepts.rst:85
 msgid ""
 "An unspecified party and the reasons that no ownership or control can be "
@@ -381,7 +381,7 @@ msgstr ""
 "Una parte no especificada y los motivos por los que no se puede especificar "
 "la titularidad o el control."
 
-# ef51a15686c945729b2b60228a0af540
+# fadb7b717bcd4ecfab4b743ecaa7088f
 #: ../../schema/concepts.rst:87
 msgid ""
 "The ownership-or-control statement also contains an array of ``interests``, "
@@ -394,7 +394,7 @@ msgstr ""
 " códigos tipoDeParticipación <reference.html#interesttype>`_) y, cuando es "
 "pertinente, porcentajes que indican el tamaño de la participación."
 
-# fead8340e0b942bbb0e8ab85c9a71b40
+# 4e5db10daa52460a9ec36d2441c28a96
 #: ../../schema/concepts.rst:89
 msgid ""
 "To explore the structure of the data model in full use the :doc:`Schema "
@@ -406,32 +406,32 @@ msgstr ""
 ":any:`Referencias del esquema <schema-reference>`  para obtener definiciones"
 " detalladas de cada objeto y campo."
 
-# 91a51ed66da241a193b42313f8f968eb
+# 8f2950d6636a4b3aa688ff4f351662c3
 #: ../../schema/concepts.rst:93
 msgid "Ownership or control through arrangements"
 msgstr "Titularidad o control a través de estructuras jurídicas"
 
-# 23713cf4a8874fa082a173ae444db299
+# dcd68a313a2f4cdcb018040dbd71b16a
 #: ../../schema/concepts.rst:95
 msgid "In some cases ownership or control is exercised through:"
 msgstr "En algunos casos, la titularidad o el control se ejerce por medio de:"
 
-# 4338f7a8ec014204856087cdd81ca37c
+# feccf531f87a4e38a5776968b28326e0
 #: ../../schema/concepts.rst:97
 msgid "Trusts;"
 msgstr "Fideicomisos;"
 
-# e7b0a66d656e43bab43bfec80906c216
+# 64fba7c5d4ef4386ab27043094b8173d
 #: ../../schema/concepts.rst:98
 msgid "Contracts; and"
 msgstr "Contratos; y"
 
-# 8cdbeecaf38d4823b1696b1945ebcacf
+# 559868e3aace4c088679a9efef03d268
 #: ../../schema/concepts.rst:99
 msgid "Other arrangements"
 msgstr "Otras estructuras jurídicas"
 
-# a6d3d2377f5f4f238c6543729e1dab03
+# 38bfa94cdd2e40e5a5e04a69eef30e60
 #: ../../schema/concepts.rst:101
 msgid ""
 "Depending on the particular jurisdiction these are covered by, they may or "
@@ -440,7 +440,7 @@ msgstr ""
 "Según la jurisdicción particular en la que estén comprendidas, pueden tener "
 "o no una identidad jurídica inscripta."
 
-# 2e26a453cebe4c81a3576cdd97a49dd4
+# 8862a8e80b674167817786a912d91030
 #: ../../schema/concepts.rst:103
 msgid ""
 "In BODS arrangements such as these are treated as a special kind of "
@@ -450,7 +450,7 @@ msgstr ""
 "especial de ``entityStatement`` en la cual ``entityType`` tiene el valor: "
 "\"arrangement\"."
 
-# e696baa347ea496e91d0da15bd8a05e2
+# b75407e3025a427fb2f214d185f1759f
 #: ../../schema/concepts.rst:105
 msgid ""
 "This allows control via arrangements to be modelled in two steps, describing"
@@ -459,17 +459,17 @@ msgstr ""
 "Esto permite modelar en dos pasos el control ejercido a través de "
 "estructuras jurídicas, describiendo cómo:"
 
-# 911a4a8e0499412b8dd5760434e948be
+# 5b5fb019255b4eb1b4f46254c5b2b224
 #: ../../schema/concepts.rst:107
 msgid "Person P has an interest in Arrangement A"
 msgstr "La Persona P posee una participación en la Estructura Jurídica A"
 
-# 699bc06be11f4d7496d22bad8ffe1483
+# ab6124e6a46f4233ac524eb90bd07a11
 #: ../../schema/concepts.rst:108
 msgid "Arrangement A has an interest in Entity E"
 msgstr "La Estructura Jurídica A posee una participación en la Entidad E"
 
-# 9f0f9212039348f29192d8b2e884e45f
+# 418afd74282343949b5b79319b95d73e
 #: ../../schema/concepts.rst:110
 msgid ""
 "For more guidance on modelling arrangements, contact the :any:`BODS Helpdesk"
@@ -478,12 +478,12 @@ msgstr ""
 "Para obtener más orientación acerca de la modelización de estructuras "
 "jurídicas, comuníquese con la :any:`Asistencia Técnica del BODS <support>`."
 
-# 7e3b64bf34c34ddd9cf8c9392b08faa4
+# 85fc5820452b4da2b7418058ac88eed7
 #: ../../schema/concepts.rst:113
 msgid "Direct and indirect ownership and control"
 msgstr "Titularidad y control directo e indirecto"
 
-# f3f3e42162e8423182b2ef9a0af6a762
+# 1a247e9d4d44491ba5cba5879b79ed22
 #: ../../schema/concepts.rst:115
 msgid ""
 "BODS can be used to describe both direct ownership and control (where Person"
@@ -502,12 +502,12 @@ msgstr ""
 "la propiedad ``interestLevel``, que puede configurarse para cada "
 "participación declarada."
 
-# 50928c8c33c340aab68b7ecd756a4393
+# 13475e37255047b4b10f7184318fd8b2
 #: ../../schema/concepts.rst:119
 msgid "Immutability of statements"
 msgstr "Inalterabilidad de las declaraciones"
 
-# ea50ee5a4aa140cd8f8dcf662f8c9199
+# 25428bce8b584d03b47e501770c9360e
 #: ../../schema/concepts.rst:121
 msgid ""
 "Published BODS statements should be treated as a write-only ledger, with new"
