--- a/docs/locale/es/LC_MESSAGES/schema.po
+++ b/docs/locale/es/LC_MESSAGES/schema.po
@@ -1,22 +1,22 @@
 # Translations template for PROJECT.
-# Copyright (C) 2019 ORGANIZATION
+# Copyright (C) 2022 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
 # Translators:
-# Javier Sarquis <sarquis.translations@gmail.com>, 2020
-# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
-# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
-# Peter Low <peter@openownership.org>, 2020
+# Javier Sarquis <sarquis.translations@gmail.com>, 2022
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
+# Peter Low <peter@openownership.org>, 2022
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-09-06 12:21+0000\n"
+"POT-Creation-Date: 2022-04-06 11:51+0000\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
-"Last-Translator: Peter Low <peter@openownership.org>, 2020\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
