--- a/docs/locale/ru/LC_MESSAGES/about/index.po
+++ b/docs/locale/ru/LC_MESSAGES/about/index.po
@@ -5,16 +5,17 @@
 # 
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
-# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
+# Amy Guy <amy.guy@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-07 15:29+0000\n"
+"POT-Creation-Date: 2022-04-06 11:47+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
+"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,12 +23,12 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-# b25a5fc33ec64d3693aa1adf1fa2816a
+# a13ed0d52d144913a72cdaa47f620c5f
 #: ../../about/index.rst:2
 msgid "About"
 msgstr "О Стандарте"
 
-# 1f7582f351404c70b369829a8b94d0ad
+# 7e595edb87484223ab3072c4005cbbc6
 #: ../../about/index.rst:4
 msgid ""
 "This website contains the draft specification of the Beneficial Ownership "
@@ -40,12 +41,12 @@ msgstr ""
 "Стандартом предусмотрен структурированный шаблон для описания бенефициарного"
 " владения в виде машиночитаемых данных."
 
-# ab8f688c172240fc85778a2c3b67febe
+# 5f65cc45b83a46eabbac651ce468d3cc
 #: ../../about/index.rst:9
 msgid "Background"
 msgstr "Краткая справка"
 
-# 5f98163f0eb7486188f0d9a84b81f82a
+# 587b32e5071146638c8abf2360653e97
 #: ../../about/index.rst:12
 msgid ""
 "Money laundering, tax evasion and obscure chains of ownership are "
@@ -59,7 +60,7 @@ msgstr ""
 "все могут получить выгоду от более высокого уровня прозрачности в отношении "
 ":ref:`бенефициарного владения<what-is-bo>`."
 
-# 7eb879e1c9bc4ed19e3af8939223cda8
+# 7bcaa9cea46e46deb87c2a6d3c8a1736
 #: ../../about/index.rst:14
 msgid ""
 "The Beneficial Ownership Data Standard enables this transparency by "
@@ -73,24 +74,24 @@ msgstr ""
 " которые более интероперабельны, характеризуются большей простотой "
 "повторного использования и более высоким качеством."
 
-# a9f64f1ca06d4f919ee7f70da3efd440
+# b965178c99454b0d83a3835cce034461
 #: ../../about/index.rst:16
 msgid ""
 "The Standard is being developed under the guidance of a :doc:`working group "
-"<governance>` co-chaired by OpenOwnership. More details about the "
+"<governance>` co-chaired by Open Ownership. More details about the "
 "organisation are available at www.openownership.org."
 msgstr ""
 "Разработка Стандарта ведется под руководством :doc:`рабочей "
-"группы<governance>` в сопредседательстве с OpenOwnership. Дополнительная "
-"информация об этой организации доступна по адресу www.openownership.org.\""
+"группы<governance>` в сопредседательстве с Open Ownership. Дополнительная "
+"информация об этой организации доступна по адресу www.openownership.org."
 
-# 5dfafd71de4b4ec186211a9b7b7fd881
+# 1fb22e0a6a834b11a7d12567c3c2e43f
 #: ../../about/index.rst:21
 msgid "Current status of the standard"
 msgstr "Текущий статус стандарта"
 
-# 97801094d755465f92699673b665a14f
-#: ../../about/index.rst:26
+# a676455c59b646d8a26d8e1a64b6c6c2
+#: ../../about/index.rst:23
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. The data model has "
 "been updated and additional codelist information added since v0.1."
@@ -99,8 +100,8 @@ msgstr ""
 "версией 0.1 была обновлена модель данных и добавлена дополнительная "
 "информация из списка допустимых значений."
 
-# c164bf78ddd04a2c8609380b03ea770b
-#: ../../about/index.rst:29
+# 05e940c07c52459481a2fadd6a1d9357
+#: ../../about/index.rst:26
 msgid ""
 "Implementers should be aware that future changes are anticipated, before a "
 "version 1.0 release. However, from the v0.1 release onwards, any structural "
@@ -115,8 +116,8 @@ msgstr ""
 "изменений<changelog>`, при этом документирование предыдущих версий ведется в"
 " форме архива."
 
-# 85756ec5417e4d2bbc329f01771e18d7
-#: ../../about/index.rst:36
+# 77088c2e60dd47efbc947d062df440e2
+#: ../../about/index.rst:33
 msgid ""
 "The schema contains a structure, fields and codelists but does not yet "
 "enforce validation constraints on most fields."
@@ -124,13 +125,13 @@ msgstr ""
 "Схема содержит структуру, поля и списки допустимых значений, но в ней еще не"
 " учтены ограничения в отношении валидации по большинству полей."
 
-# 8e07ce6390fe4ecf97a921fd9681b184
-#: ../../about/index.rst:41
+# e71d1140927e46f38ef52252bddeec1f
+#: ../../about/index.rst:38
 msgid "Get involved"
 msgstr "Принять участие"
 
-# 0ea44d43df29461eba7d77a22ac02b04
-#: ../../about/index.rst:43
+# 472fe48afab34672ab938eb59649fc63
+#: ../../about/index.rst:40
 msgid ""
 "All changes to the standard draft, documentation and specification take "
 "place via GitHub at https://github.com/openownership/data-standard/."
@@ -139,8 +140,8 @@ msgstr ""
 "осуществляется через GitHub по адресу https://github.com/openownership/data-"
 "standard/."
 
-# f1da8ca4afa64d46b422d44a7e45d563
-#: ../../about/index.rst:46
+# 80ca7adce7b64839b0ad7ce50f96f69e
+#: ../../about/index.rst:43
 msgid ""
 "Suggestions for changes can be made via the `project issue tracker "
 "<https://github.com/openownership/data-standard/issues>`__."
@@ -149,8 +150,8 @@ msgstr ""
 "отслеживания ошибок проекта<https://github.com/openownership/data-"
 "standard/issues>`__."
 
-# fe6c596a0abb4860a087a28089a86e09
-#: ../../about/index.rst:49
+# 62b57b9bb6e04e7caaec90c1375edc3b
+#: ../../about/index.rst:46
 msgid ""
 "If you would like to be involved in the development and review of the "
 "Standard, see the :doc:`Governance <governance>` page."
@@ -158,17 +159,17 @@ msgstr ""
 "Если вам хотелось бы участвовать в разработке и анализе Стандарта, см. "
 ":doc:`страницу «Управление»<governance>`."
 
-# 5bcd641b24884ee1b41b05fab0d9e461
-#: ../../about/index.rst:63
+# 05e4d27148954405afd8b65ff4527cc7
+#: ../../about/index.rst:60
 msgid "Partners and funders"
 msgstr "Партнеры и спонсоры"
 
-# 29ca9f87f4fc46aeaf0f0ff14a26105c
-#: ../../about/index.rst:65
+# 186ee332cd38414893dce3da1d9aa061
+#: ../../about/index.rst:62
 msgid ""
 "The initial development of the Beneficial Ownership Data Standard was funded"
-" by OpenOwnership as part of a UK Department for International Development "
-"funded project. OpenOwnership is led by a steering group of the world's "
+" by Open Ownership as part of a UK Department for International Development "
+"funded project. Open Ownership is led by a steering group of the world's "
 "leading transparency organizations including `Transparency International "
 "<https://www.transparency.org/>`__, `OpenCorporates "
 "<https://opencorporates.com>`__, `One "
@@ -178,10 +179,10 @@ msgid ""
 "<http://bteam.org/>`__."
 msgstr ""
 "Первоначальная разработка Стандарта данных о бенефициарном владении "
-"финансировалась OpenOwnership в рамках проекта, финансируемого Министерством"
-" Великобритании по международному развитию. Руководство OpenOwnership "
-"осуществляется руководящей группой ведущих мировых организаций из области "
-"прозрачности, включая `Transparency International "
+"финансировалась Open Ownership в рамках проекта, финансируемого "
+"Министерством Великобритании по международному развитию. Руководство Open "
+"Ownership осуществляется руководящей группой ведущих мировых организаций из "
+"области прозрачности, включая `Transparency International "
 "<https://www.transparency.org/>`__, `OpenCorporates "
 "<https://opencorporates.com>`__, `One "
 "<https://www.one.org/international/>`__, the `Open Contracting Partnership "
@@ -189,8 +190,8 @@ msgstr ""
 "<https://www.globalwitness.org/en-gb/>`__ и `The B Team "
 "<http://bteam.org/>`__."
 
-# 1c0892ebe6604bbeb23aa8a7dc79ed11
-#: ../../about/index.rst:76
+# ab70a925968440f2940445ef19e15eb4
+#: ../../about/index.rst:73
 msgid ""
 "The specification and documentation have been developed by `Open Data "
 "Services Co-operative <http://www.opendataservices.coop>`__ and "
@@ -203,27 +204,28 @@ msgstr ""
 ":doc:`авторах<credits>` для получения подробной информации о разработчиках "
 "Стандарта."
 
-# 7181ac99734e4c38b1a0008b9c62dcff
-#: ../../about/index.rst:83
+# 77efd445604f4eff88d664f2e3d71c77
+#: ../../about/index.rst:80
 msgid "License and contributor agreement"
 msgstr "Лицензионное и авторское соглашение"
 
-# 521acbbfa66c4fdbab4636707c460f87
-#: ../../about/index.rst:85
+# 046d4bf1f1e0412d897d7836f893be31
+#: ../../about/index.rst:82
 msgid ""
-"Schema contents of the OpenOwnership Register are Copyright 2016 World Wide "
-"Web Foundation on behalf of the OpenOwnership Steering Group."
+"Schema contents of the Open Ownership Register are Copyright 2016 World Wide"
+" Web Foundation on behalf of the Open Ownership Steering Group."
 msgstr ""
-"Содержимое схемы Реестра OpenOwnership защищено авторским правом фонда World"
-" Wide Web Foundation от 2016 г. от имени Руководящей группы OpenOwnership."
+"Содержимое схемы Реестра Open Ownership защищено авторским правом фонда "
+"World Wide Web Foundation от 2016 г. от имени Руководящей группы Open "
+"Ownership."
 
-# 797c833096a145baa2ac6c61ae2ab2c2
-#: ../../about/index.rst:88
+# ea6d80c8fd154355a3a3c0f183010f91
+#: ../../about/index.rst:85
 msgid "The schema is licensed under the Apache License, Version 2.0."
 msgstr "На схему распространяется действие Лицензии Apache, версия 2.0."
 
-# 8a3d2ba06c784738b9d4624e9b9f0a8d
-#: ../../about/index.rst:90
+# 7f4ca83c5b884b98af31fb1e482d8edb
+#: ../../about/index.rst:87
 msgid ""
 "Contributors are required to accept the `contributor agreement "
 "<https://github.com/openownership/data-"
@@ -233,16 +235,16 @@ msgstr ""
 "<https://github.com/openownership/data-"
 "standard/blob/master/CONTRIBUTING.md>`__.."
 
-# d2e9d36247bb4f6a91332ff8810310e0
-#: ../../about/index.rst:95
+# 8c97f944008a4b3fb39d3b9012b3bc13
+#: ../../about/index.rst:92
 msgid "Contact"
 msgstr "Контактные данные"
 
-# 4e75875df4a045c4adf57ad37359447d
-#: ../../about/index.rst:97
+# eb7edf37bb6f46e9b0f5c0c34a84a447
+#: ../../about/index.rst:94
 msgid ""
-"For more details about OpenOwnership, please email "
+"For more details about Open Ownership, please email "
 "support@openownership.org."
 msgstr ""
-"Для получения дополнительной информации об OpenOwnership просим обращаться "
+"Для получения дополнительной информации об Open Ownership просим обращаться "
 "по адресу support@openownership.org."
