--- a/docs/locale/ru/LC_MESSAGES/schema.po
+++ b/docs/locale/ru/LC_MESSAGES/schema.po
@@ -1,21 +1,21 @@
 # Translations template for PROJECT.
-# Copyright (C) 2019 ORGANIZATION
+# Copyright (C) 2022 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
 # Translators:
-# Valery Gusak <valery.gusak@gmail.com>, 2019
-# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
-# Amy Guy <amy.guy@opendataservices.coop>, 2019
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
+# Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Valery Gusak <valery.gusak@gmail.com>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-09-06 12:21+0000\n"
+"POT-Creation-Date: 2022-04-06 11:51+0000\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2019\n"
+"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -365,7 +365,7 @@ msgid ""
 "Vocabulary](https://joinup.ec.europa.eu/solution/e-government-core-"
 "vocabularies) definitions."
 msgstr ""
-"ФИО, под которым известно это физическое лицо. ФИО следует указывать в "
+"ФИО, под которым известно данное физическое лицо. ФИО следует указывать в "
 "строке fullName (полное ФИО), и оно дополнительно может быть разделено на "
 "поля familyName (фамилия), givenName (имя) и patronymicName (отчество) на "
 "основе определений из [Списка основных терминов касательно физических лиц из"
