--- a/docs/locale/ru/LC_MESSAGES/schema/schema-browser.po
+++ b/docs/locale/ru/LC_MESSAGES/schema/schema-browser.po
@@ -4,16 +4,16 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Valery Gusak <valery.gusak@gmail.com>, 2019
+# Valery Gusak <valery.gusak@gmail.com>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2022-04-06 11:47+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
+"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,12 +21,12 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-# efd18c0b36164a89b4bf5f1f01e8531f
+# 923cf157a50f4681b94596c47c7ede90
 #: ../../schema/schema-browser.rst:4
 msgid "Schema browser"
 msgstr "Браузер схемы"
 
-# 1fa7fd3496e448198b31a4be150474f5
+# 3ccced084f1c46388fcd648156a6b5ce
 #: ../../schema/schema-browser.rst:8
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
@@ -42,7 +42,7 @@ msgstr ""
 "<changelog>` и `О стандарте <../about>`_ для получения дополнительной "
 "информации."
 
-# f1a803aadd834f9c99b6ede3c1dd9fae
+# a9a29c9385e3423db01cee526a2953e7
 #: ../../schema/schema-browser.rst:10
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
@@ -53,7 +53,7 @@ msgstr ""
 " рекомендуемых элементов Стандарта, как определено в `RFC2119 "
 "<https://tools.ietf.org/html/rfc2119>`_."
 
-# 127d0460d9ed4f129deb1f3b51e59186
+# 24a21d42582941fa8a7df3a6ddcb5151
 #: ../../schema/schema-browser.rst:13
 msgid ""
 "The draft Beneficial Ownership Data Standard schema is defined using `JSON "
@@ -62,7 +62,7 @@ msgstr ""
 "Проект схемы Стандарта данных о бенефициарном владении определен при помощи "
 "`Схемы JSON 0.4 <http://json-schema.org/>`_."
 
-# 52b78f402b4f473fade45253d3ba2ba0
+# 826525a770ff46d38da74f05d08d2e18
 #: ../../schema/schema-browser.rst:15
 msgid ""
 "The structure of each of the schema's top level components can be explored "
@@ -73,44 +73,44 @@ msgstr ""
 "помощи приведенных ниже средств просмотра. (Нажмите на подкомпоненты для "
 "отображения их свойств)."
 
-# 80397c73f714462988de7ad94cb96af1
+# 8cf52898669a46eeb097539298568a3c
 #: ../../schema/schema-browser.rst:17
 msgid ""
 ":ref:`Ownership-or-control statement <schema-browser-ownership-or-control>`"
 msgstr ""
 ":ref:`Запись о владении или контроле <schema-browser-ownership-or-control>`"
 
-# b6245fc0a5f746b9a621a368d588fdb8
+# 1a72c5e2d7c640459d2bfcfd5ae1dd21
 #: ../../schema/schema-browser.rst:18
 msgid ":ref:`Entity statement <schema-browser-entity>`"
 msgstr ":ref:`Запись о субъекте <schema-browser-entity>`"
 
-# 585c859ceb2b47b98688e288e637ad3e
+# d068ddb7759e4a679850c9cead9d1548
 #: ../../schema/schema-browser.rst:19
 msgid ":ref:`Person statement <schema-browser-person>`"
 msgstr ":ref:`Запись о физическом лице <schema-browser-person>`"
 
-# 52f6797e99e54ac29b50962fa413bf58
+# 652c6ba237484f5198c52b886aa70e84
 #: ../../schema/schema-browser.rst:24
 msgid "Ownership-or-control statement"
 msgstr "Запись о владении или контроле"
 
-# c7b7fafcad6f47cc99a4732adfed71f3
+# c9d88cdddcba4b62a6cc051f1be958ad
 #: ../../schema/schema-browser.rst:26
 msgid ""
 "View the `Ownership-or-control statement JSON schema <../_static/ownership-"
 "or-control-statement.json>`_ or explore it using the viewer below."
 msgstr ""
-"Просмотрите `схему JSON Записи о владении или контроле <../_static"
-"/ownership-or-control-statement.json>`_ или изучите ее при помощи "
-"приведенного ниже средства просмотра."
+"Просмотрите `схему JSON Записи о владении или контроле "
+"<../_static/ownership-or-control-statement.json>`_ или изучите ее при помощи"
+" приведенного ниже средства просмотра."
 
-# 8cc030b146d44f3fb8ae2d7d86a1d255
+# 98577d57688748c588f6ca798cf7e1ac
 #: ../../schema/schema-browser.rst:35
 msgid "Entity statement"
 msgstr "Запись о субъекте"
 
-# 2d9b9e845ea742838358ecabadcdbc93
+# 6ee46bd82af242f799535aee826b20fd
 #: ../../schema/schema-browser.rst:38
 msgid ""
 "View the `Entity Statement JSON schema <../_static/entity-statement.json>`_ "
@@ -120,12 +120,12 @@ msgstr ""
 "statement.json>`_ или изучите ее при помощи приведенного ниже средства "
 "просмотра."
 
-# 5fedac435e9549159f4ece797f1d4a83
+# 26d991bb04e74dcd8202524051fd91c7
 #: ../../schema/schema-browser.rst:48
 msgid "Person statement"
 msgstr "Запись о физическом лице"
 
-# 07907455b3104a78ac83c6d9fd23af62
+# 61781b129d264aae9f39f4d293473075
 #: ../../schema/schema-browser.rst:50
 msgid ""
 "View the `Person Statement JSON schema <../_static/person-statement.json>`_ "
