--- a/docs/locale/ru/LC_MESSAGES/about/credits.po
+++ b/docs/locale/ru/LC_MESSAGES/about/credits.po
@@ -6,6 +6,7 @@
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
+# Amy Guy <amy.guy@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-04-06 11:47+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
+"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -73,7 +74,7 @@ msgid ""
 " working group <governance>`."
 msgstr ""
 "Версию 0.2 написали Джек Лорд, Саймон Уайтхаус и Кади Армстронг (`Open Data "
-"Services Co-operative http://www.opendataservices.coop>`_), техническую "
+"Services Co-operative <http://www.opendataservices.coop>`_), техническую "
 "работу выполнили Джеймс Бастер, Ами Гай и Дэвид Разник (`Open Data Services "
 "Co-operative <http://www.opendataservices.coop>`_), также было получено "
 "содействие рабочей :doc:`группы по стандарту данных <governance>`."
